# mpc-frost

backend/: Cargo.toml
backend/src/: main.rs
mpc/: Cargo.toml
mpc/src/: main.rs  point.rs  temp.rs  utils.rs
