[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
bs58 = "0.5.1"
ed25519-dalek = "2.2.0"
frost-ed25519 = { version = "2.2.0", features = ["serialization"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

