[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = {version = "2.0.1", features = ["serde"] }
curve25519-dalek = "3"
ed25519-dalek = "2.2.0"
frost-dalek = "0.2.3"
frost-ed25519 = { version = "2.2.0", features = ["serialization"] }
hex = "0.4.3"
rand = "0.8"        # optional if you already use rand
rand_core = "0.6" 
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-sdk = "3.0.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }    


